# pySigma-pipeline-sysmon

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/pipelines/sysmon/: __init__.py  sysmon.py
tests/: test_processing_pipelines_sysmon.py
