[tool.poetry]
name = "pysigma-pipeline-sysmon"
version = "1.0.4"
description = "pySigma Sysmon processing pipelines"
readme = "README.md"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-pipeline-sysmon/"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"

[tool.poetry.dev-dependencies]
black = "^24.1"
pytest = "^8.0"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
